[package]
name = "lemon-compiler"
version = "0.1.0"
edition = "2021"
description = "A massively parallel runtime with responsive data flows."
authors = ["Yazalde Filimone <yazaldefilimon@gmail.com>"]
repository = "https://github.com/yazaldefilimone/stella-compiler"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
code_highlighter = "0.1.1"
parking_lot = "0.12.3"
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
smallvec = "1.13.2"

[dev-dependencies]
criterion = "0.5.1"
glob = "0.3.1"
insta = { version = "1.39.0", features = ["ron"] }

[profile.release]
lto = "fat"       # Link Time Optimization, "fat" aplica otimizações mais agressivas
opt-level = 3
codegen-units = 1
strip = "symbols" # set to `false` for debug information
debug = false     # set to `true` for debug information
panic = "abort"   # Let it crash and force ourselves to write safe Rust.
# Profile for `cargo coverage`
[profile.coverage]
inherits = "release"
lto = "thin"            # Faster compile time with thin lto
debug-assertions = true # Make sure `debug_assert!`s pass
